<resources>
    <string name="app_name">latte-ec</string>

    <string name="label_sign_up">注册</string>
    <string name="label_sign_in">登录</string>
    <string name="label_link_sign_up">已经注册了?去登陆</string>
    <string name="label_link_sign_in">还没有账户?去注册</string>
    <string name="label_re_password">重复密码</string>
    <string name="label_password">密码</string>
    <string name="label_email_address">邮箱地址</string>
    <string name="label_phone_number">手机号码</string>
    <string name="label_user_name">用户名</string>
    <string name="label_more"><![CDATA[more >]]></string>
    <string name="label_search">搜索</string>
    <string name="icon_weixin_signin">{fa-weixin}</string>
    <string name="icon_scan">{icon-scan}</string>
    <string name="icon_bullhorn">{fa-bullhorn}</string>



    <string name="title_sort">分类</string>
    <string name="title_discovery">发现</string>
    <string name="menu_shop_cart_clear">清空</string>
    <string name="title_shop_cart">购物车</string>
    <string name="menu_shop_cart_delete">删除</string>
    <string name="label_choose_all">全选</string>
    <string name="fa_check_circle">{fa-check-circle}</string>

</resources>
