<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:paddingTop="@dimen/statusBarSize"
        android:layout_width="match_parent"
        android:layout_height="@dimen/statusWithActionBarSize"
        android:background="@android:color/holo_orange_light">

        <TextView
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_sign_in"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:textColor="@color/white"
            tools:ignore="RtlHardcoded" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:hint="@string/label_email_address"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:hint="@string/label_password"
                    android:inputType="numberPassword" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/tv_sign_in"
                android:textColor="@color/white"
                android:text="@string/label_sign_in"
                android:layout_marginTop="24dp"
                android:background="@android:color/holo_orange_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/tv_go_sign_up"
                android:layout_marginTop="16dp"
                android:text="@string/label_link_sign_in"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.joanzapata.iconify.widget.IconTextView
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:id="@+id/ic_tv_weixin"
                android:textSize="40sp"
                android:textColor="@android:color/holo_green_light"
                android:text="@string/icon_weixin_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />




        </LinearLayout>


    </ScrollView>

</LinearLayout>