<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:background="@color/orange_300"
        android:paddingTop="@dimen/statusBarSize"
        android:layout_width="match_parent"
        android:layout_height="@dimen/statusWithActionBarSize">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_clear"
                android:text="@string/menu_shop_cart_clear"
                android:textSize="@dimen/font_18"
                android:textColor="@color/white"
                android:layout_marginLeft="@dimen/len_20"
                android:layout_marginRight="@dimen/len_20"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <TextView
                android:textColor="@color/white"
                android:textSize="@dimen/font_20"
                android:text="@string/title_shop_cart"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tv_delete"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/len_20"
                android:layout_marginLeft="@dimen/len_20"
                android:textSize="@dimen/font_18"
                android:textColor="@color/white"
                android:text="@string/menu_shop_cart_delete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:ignore="RtlHardcoded" />

        </RelativeLayout>




    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_shop_cart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8" />

    <android.support.v7.widget.ViewStubCompat
        android:id="@+id/stub_no_item"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:background="@android:color/white"
        android:layout="@layout/stub_shop_cart_no_item"
        android:minHeight="50dp"
        android:orientation="horizontal" />

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:minHeight="50dp"
        android:orientation="horizontal">

        <!--全选图标模块-->
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:minHeight="50dp"
            android:orientation="horizontal">

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/icon_shop_cart_select_all"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fa_check_circle"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/label_choose_all"
                android:textColor="@color/app_main" />
        </android.support.v7.widget.LinearLayoutCompat>
        <!--全选部分结束-->

        <!--合计部分-->
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:minHeight="50dp"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="合计"
                android:textColor="@android:color/darker_gray"
                tools:ignore="HardcodedText" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_shop_cart_total_price"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|left"
                android:text="￥0.01"
                android:textColor="@color/app_main"
                android:textSize="20sp"
                tools:ignore="HardcodedText,RtlHardcoded" />

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_shop_cart_pay"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/app_main"
            android:gravity="center"
            android:text="结算"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            tools:ignore="HardcodedText" />

    </android.support.v7.widget.LinearLayoutCompat>

</LinearLayout>